Ciar Login e Register
Foi criado o Login e o Register de utilizadores no site.

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -63,6 +63,7 @@
                         <label class="form-check-label me-2" for="themeSwitch">Light Mode</label>
                         <input class="form-check-input" type="checkbox" id="themeSwitch">
                         <label class="form-check-label ms-2" for="themeSwitch">Dark Mode</label>
+                        @await Html.PartialAsync("_LoginPartial")
                     </div>
                 </div>
             </div>
