--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -20,6 +20,12 @@
             border-bottom: 1px solid #444;
         }
 
+        .dark-mode .footer {
+            background-color: #222 !important;
+            color: #ffffff !important;
+            border: 1px solid #444;
+        }
+
         .dark-mode .nav-link,
         .dark-mode .navbar-brand {
             color: #ffffff !important;
@@ -97,13 +103,13 @@
             }
 
         .logout-btn {
-            color: #e74c3c;
-            border: 2px solid #e74c3c;
+            color: #ffffff;
+            border: 2px solid #ffffff;
         }
 
             .logout-btn:hover {
-                background-color: #e74c3c;
-                color: #ffffff;
+                background-color: #ffffff;
+                color: #000000;
             }
 
         .register-btn {
@@ -137,6 +143,15 @@
                 color: #000000;
             }
 
+        .logout-btn {
+            color: #ffffff;
+            border: 2px solid #ffffff;
+        }
+
+            .logout-btn:hover {
+                background-color: #ffffff;
+                color: #000000;
+            }
 
         .navbar {
             border-radius: 15px; /* Cantos arredondados */
@@ -147,6 +162,15 @@
             border: 1px solid #ddd; /* Borda suave para realce */
         }
 
+        .footer {
+            border-radius: 15px; /* Cantos arredondados */
+            margin: 10px 20px; /* Distância do topo e das laterais */
+            padding: 10px 20px; /* Espaçamento interno */
+            max-width: 98%; /* Tem de ser alterado */
+            background-color: white !important; /* Mantém o fundo visível */
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Sombra para destaque */
+            border: 1px solid #ddd; /* Borda suave para realce */
+        }
 
     </style>
 </head>
