--- a/Views/Account/Registration.cshtml
+++ b/Views/Account/Registration.cshtml
@@ -46,6 +46,14 @@
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Role"></label>
+                <select asp-for="Role" class="form-control">
+                    <option value="">Select Role</option>
+                    <option value="Pessoal">Pessoal</option>
+                    <option value="Empresarial">Empresarial</option>
+                </select>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Register" class="btn btn-primary" />
             </div>
         </form>
