--- a/Views/Account/Registration.cshtml
+++ b/Views/Account/Registration.cshtml
@@ -46,11 +46,11 @@
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Role"></label>
-                <select asp-for="Role" class="form-control">
+                <label asp-for="Type">Role</label>
+                <select asp-for="Type" class="form-control">
                     <option value="">Select Role</option>
-                    <option value="Pessoal">Pessoal</option>
-                    <option value="Empresarial">Empresarial</option>
+                    <option value="1">Pessoal</option>
+                    <option value="2">Empresarial</option>
                 </select>
             </div>
             <div class="form-group">
