Criação de views
Foram criadas as views do planeamento

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -205,8 +205,8 @@
                                 Transações
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="transacoesDropdown">
-                                <li><a class="dropdown-item" asp-controller="Transaction" asp-action="NewTransaction">Nova Transação</a></li>
-                                <li><a class="dropdown-item" asp-controller="Transaction" asp-action="Historico">Histórico</a></li>
+                                <li><a class="dropdown-item" asp-controller="Transacao" asp-action="NovaTransacao">Nova Transação</a></li>
+                                <li><a class="dropdown-item" asp-controller="Transacao" asp-action="Historico">Histórico</a></li>
                             </ul>
                         </li>
 
