--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -195,44 +195,46 @@
                 </button>
 
                 <div class="collapse navbar-collapse justify-content-between" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="btn btn-light mx-2" asp-controller="Home" asp-action="Index">Dashboard</a>
-                        </li>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="btn btn-light mx-2" asp-controller="Home" asp-action="Index">Dashboard</a>
+                            </li>
 
-                        <li class="nav-item dropdown">
-                            <a class="btn btn-light mx-2 dropdown-toggle" href="#" id="transacoesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Transações
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="transacoesDropdown">
-                                <li><a class="dropdown-item" asp-controller="Transacao" asp-action="NovaTransacao">Nova Transação</a></li>
-                                <li><a class="dropdown-item" asp-controller="Transacao" asp-action="Historico">Histórico</a></li>
-                            </ul>
-                        </li>
+                            <li class="nav-item dropdown">
+                                <a class="btn btn-light mx-2 dropdown-toggle" href="#" id="transacoesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Transações
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="transacoesDropdown">
+                                    <li><a class="dropdown-item" asp-controller="Transacao" asp-action="NovaTransacao">Nova Transação</a></li>
+                                    <li><a class="dropdown-item" asp-controller="Transacao" asp-action="Historico">Histórico</a></li>
+                                </ul>
+                            </li>
 
-                        <li class="nav-item dropdown">
-                            <a class="btn btn-light mx-2 dropdown-toggle" href="#" id="planeamentoDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Planeamento
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="planeamentoDropdown">
-                                <li><a class="dropdown-item" asp-controller="Planeamento" asp-action="Metas">Metas</a></li>
-                                <li><a class="dropdown-item" asp-controller="Planeamento" asp-action="Orcamento">Orçamento</a></li>
-                            </ul>
-                        </li>
+                            <li class="nav-item dropdown">
+                                <a class="btn btn-light mx-2 dropdown-toggle" href="#" id="planeamentoDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Planeamento
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="planeamentoDropdown">
+                                    <li><a class="dropdown-item" asp-controller="Planeamento" asp-action="Metas">Metas</a></li>
+                                    <li><a class="dropdown-item" asp-controller="Planeamento" asp-action="Orcamento">Orçamento</a></li>
+                                </ul>
+                            </li>
 
-                        <li class="nav-item dropdown">
-                            <a class="btn btn-light mx-2 dropdown-toggle" href="#" id="relatorioDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Relatório
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="relatorioDropdown">
-                                <li><a class="dropdown-item" asp-controller="Relatorios" asp-action="Mensal">Mensal</a></li>
-                                <li><a class="dropdown-item" asp-controller="Relatorios" asp-action="Anual">Anual</a></li>
-                            </ul>
-                        </li>
-                    </ul>
+                            <li class="nav-item dropdown">
+                                <a class="btn btn-light mx-2 dropdown-toggle" href="#" id="relatorioDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Relatório
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="relatorioDropdown">
+                                    <li><a class="dropdown-item" asp-controller="Relatorios" asp-action="Mensal">Mensal</a></li>
+                                    <li><a class="dropdown-item" asp-controller="Relatorios" asp-action="Anual">Anual</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    }
 
-
-                    <div class="d-flex align-items-center">
+                    <div class="d-flex align-items-center ms-auto">
                         <div class="theme-toggle me-3">
                             <i id="theme-icon" class="fas fa-sun"></i>
                         </div>
