Alteração de estilo das transações

--- a/Views/Planeamento/Metas.cshtml
+++ b/Views/Planeamento/Metas.cshtml
@@ -37,7 +37,7 @@
     </div>
 </div>
 
-<!-- Tabela de Metas (Mantido Igual) -->
+<!-- Tabela de Metas -->
 <div class="card border-0 shadow-sm">
     <div class="card-body">
         <h4 class="mb-4">Minhas Metas</h4>
